[BASIC]
# Regular expression matching correct method names
method-rgx=[a-z_][a-z0-9_]{2,40}$

[flake8]
ignore=E501

[MESSAGES CONTROL]
disable=locally-disabled

[metadata]
author = Richard Huang
author_email = rickypc@users.noreply.github.com
classifiers =
    Development Status :: 4 - Beta
    Framework :: Robot Framework
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description = An Amazon AWS DynamoDB big data testing library for Robot Framework with SQL-like DSL
keywords = robot framework testing automation bigdata amazon dynamodb dynamo db nosql sql dsl json aws big data softwaretesting
license_files =
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
name = robotframework-dynamodbsqllibrary
platforms = any
url = https://github.com/rickypc/robotframework-dynamodbsqllibrary
version = attr: DynamoDBSQLLibrary.version.VERSION

[options]
install_requires =
    boto3 >=1.16.15
    dql >=0.5.28
    robotframework >=3.0
packages = find:
package_dir =
    = src
python_requires = <3.10,>=3.6

[options.packages.find]
where = src

[sdist]
formats=gztar,zip

[wheel]
universal=1
